--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/dependency-injection": "^6.2",
         "symfony/property-access": "^6.2",
         "symfony/property-info": "^6.2",
-        "symfony/runtime": "^6.2"
+        "symfony/runtime": "^6.2",
+        "symfony/uid": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
