fix: wrong name class

--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
     },
     "config": {
         "allow-plugins": {
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "php-http/discovery": true
         }
     }
 }
