--- a/tests/Fixture/config/config.yaml
+++ b/tests/Fixture/config/config.yaml
@@ -1,7 +1,8 @@
 framework:
-    test: true
     secret: test
+    handle_all_throwables: true
     http_method_override: false
+    test: true
 
 webmunkeez_elastic:
     hosts: ['http://elasticsearch:9200']
