--- a/tests/Fixture/config/config.yaml
+++ b/tests/Fixture/config/config.yaml
@@ -3,6 +3,14 @@ framework:
     handle_all_throwables: true
     http_method_override: false
     test: true
+    annotations: false
+
+    php_errors:
+        log: true
+
+    uid:
+        default_uuid_version: 7
+        time_based_uuid_version: 7
 
 webmunkeez_elastic:
     hosts: ['http://elasticsearch:9200']
